Fixed scrollbar issue, changed text sizes , fonts and colors

--- a/css/giving-styles.css
+++ b/css/giving-styles.css
@@ -1,7 +1,7 @@
 /* general settings */
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section{display:block;}
-html, body {height:100%;padding-top: 30px;}
-body { font:16px/1.25 Arial, Helvetica, sans-serif; margin:0 auto; }
+html, body {padding-top: 30px;}
+body { font:16px/1.25 "Open Sans",Arial, Helvetica, sans-serif; margin:0 auto; }
 
 .wrapper { width:100%; }
 .navbar { background: #efefef; }
@@ -60,18 +60,39 @@ body { font:16px/1.25 Arial, Helvetica, sans-serif; margin:0 auto; }
     margin: 0 auto;
     float: none;
     min-width: 300px;
+    max-width:300px;
 }
+
+.signup-wrapper h1, .signup-wrapper h2, .signup-wrapper h3, .signup-wrapper h4, .signup-wrapper h5{
+    font-family: "Nunito", sans-serif;
+}
+
+.signup-wrapper h2{
+    font-size: 36px;
+
+}
+
+.signup-wrapper h3{
+    font-size: 24px;
+}
+
+.signup-wrapper h4{
+    font-size: 18px;
+}
+
+
+
 
 
 /*Signup page icon*/
 i.signup-envelope{
-    font-size: 3em;
+    font-size: 90px;
 }
 
 /*signup sections*/
 .signup-section{
     margin-bottom:20px;
-    font: 14px/1.25 Arial, Helvetica, sans-serif;}
+}
 a.resendmail{
     text-decoration: underline;
     font-size: 0.8em;
@@ -84,17 +105,25 @@ a.resendmail{
 
 .signup-section .alert p{
     margin: 0 0 5px;
+    font-weight: normal;
+    color: #3a87ad;
 }
 
-.signup-section h3, .signup-section h5{
+.signup-section h1, .signup-section h2, .signup-section h3 {
     font-weight: 700;
+    color: #4a4a4a;
+}
+
+.signup-section h4{
+    font-weight: normal;
+    color: #333333;
 }
 
 @media (min-width: 1200px) {
 }
 
 @media (max-width: 979px){
-    html, body {height:100%;padding-top: 0px;}
+    html, body {padding-top: 0px;}
 }
 
 @media (min-width: 768px)  {
